Movable Snake and Generate Random Food

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <body>
         <div id = 'mainframe'>
             <div id="innerframe">
-                <div id = 'initialBlock'>
-                </div>
-
+                <div id = 'initialBlock'>    </div>
+                <div id = 'food'>   </div>
             </div>
         </div>
         <script src = "snake.js"></script>
