--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <body>
         <div id = 'mainframe'>
             <div id="innerframe">
-                <div id = 'initialBlock'>    </div>
+                <div id = 'score' style = 'background: none;'> Score : 0 </div>
+                <div id = 'initialBlock'> </div>
                 <div id = 'food'>   </div>
             </div>
         </div>
