--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <html>
     <head>
         <title> Snake </title>
-       
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel='stylesheet' href = 'main.css'>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"> </script>
     </head>
 
     <body>
