--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
     </head>
 
     <body>
+        <!-- Header -->
+        <div class="header"> 
+            <h1 style="color: rgba(230, 230, 230); padding: 1rem; border-radius: 10px;"> Snake  </h1>
+            <h1 id="score" style="background-color: rgba(20, 235, 206, 0.3);"> Score : 0 </h1>
+        </div>
+
+        <!-- <h1> Snakes</h1> -->
         <div id = 'mainframe'>
             <div id="innerframe">
-                <div id = 'score' style = 'background: none;'> Score : 0 </div>
                 <div id = 'initialBlock'> </div>
                 <div id = 'food'>   </div>
             </div>
